--- a/options.html
+++ b/options.html
@@ -2,11 +2,47 @@
 <html>
 <head>
   <title>School Schedule Options</title>
+  <style>
+    .class-input {
+      margin-bottom: 10px; /* Add some margin between each class input */
+    }
+  </style>
 </head>
 <body>
   <h1>School Schedule Options</h1>
-  <label for="class1">Class 1:</label>
-  <input type="text" id="class1" name="class1">
+  <div class="class-input">
+    <label for="Class1">Class 1:</label>
+    <input type="text" id="Class1" name="Class1">
+  </div>
+  <div class="class-input">
+    <label for="Class2">Class 2:</label>
+    <input type="text" id="Class2" name="Class2">
+  </div>
+  <div class="class-input">
+    <label for="Class3">Class 3:</label>
+    <input type="text" id="Class3" name="Class3">
+  </div>
+  <div class="class-input">
+    <label for="Class4">Class 4:</label>
+    <input type="text" id="Class4" name="Class4">
+  </div>
+  <div class="class-input">
+    <label for="Class5">Class 5:</label>
+    <input type="text" id="Class5" name="Class5">
+  </div>
+  <div class="class-input">
+    <label for="Class6">Class 6:</label>
+    <input type="text" id="Class6" name="Class6">
+  </div>
+  <!-- Repeat the above structure for other classes as needed -->
+  <div class="class-input">
+    <label for="Class7">Class 7:</label>
+    <input type="text" id="Class7" name="Class7">
+  </div>
+  <div class="class-input">
+    <label for="Flex">Flex:</label>
+    <input type="text" id="Flex" name="Flex">
+  </div>
   <!-- Repeat above for other classes as needed -->
   <button id="saveButton">Save</button>
   <script src="options.js"></script>
