--- a/options.html
+++ b/options.html
@@ -2,22 +2,85 @@
 <html>
 <head>
   <title>School Schedule Options</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f0f0f0;
+      background-image: url('background.jpg'); /* Replace 'background.jpg' with your background image */
+      background-size: cover;
+      background-position: center;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .container {
+      background-color: rgba(255, 255, 255, 0.9);
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+      max-width: 400px;
+      width: 100%;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 24px;
+      margin-bottom: 20px;
+      color: #333;
+    }
+
     .class-input {
-      margin-bottom: 10px; /* Add some margin between each class input */
+      margin-bottom: 20px;
+      text-align: left;
+    }
+
+    label {
+      display: block;
+      font-size: 18px;
+      margin-bottom: 5px;
+      color: #555;
+    }
+
+    input[type="text"] {
+      width: calc(100% - 12px);
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    button {
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      padding: 12px 20px;
+      font-size: 18px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <h1>School Schedule Options</h1>
-  <div class="class-input">
-    <label for="Class1">Class 1:</label>
-    <input type="text" id="Class1" name="Class1">
-  </div>
-  <div class="class-input">
-    <label for="Class2">Class 2:</label>
-    <input type="text" id="Class2" name="Class2">
-  </div>
+  <div class="container">
+    <h1>School Schedule Options</h1>
+    <div class="class-input">
+      <label for="Class1">Class 1:</label>
+      <input type="text" id="Class1" name="Class1">
+    </div>
+    <div class="class-input">
+      <label for="Class2">Class 2:</label>
+      <input type="text" id="Class2" name="Class2">
+    </div>
   <div class="class-input">
     <label for="Class3">Class 3:</label>
     <input type="text" id="Class3" name="Class3">
