--- a/options.html
+++ b/options.html
@@ -106,8 +106,10 @@
     <label for="Flex">Flex:</label>
     <input type="text" id="Flex" name="Flex">
   </div>
-  <!-- Repeat above for other classes as needed -->
-  <button id="saveButton">Save</button>
+  
+    <button id="saveButton">Save</button>
+  
+  </div>
   <script src="options.js"></script>
 </body>
 </html>
